--- a/public/locales/en/services.json
+++ b/public/locales/en/services.json
@@ -156,7 +156,7 @@
           "name": "Free",
           "basic": [],
           "professional": ["1 blog post"],
-          "premium": ["3 blog post"]
+          "premium": ["3 blog posts"]
         },
         {
           "name": "Suggestion",
