--- a/public/locales/es/services.json
+++ b/public/locales/es/services.json
@@ -156,7 +156,7 @@
           "name": "Gratis",
           "basic": [],
           "professional": ["1 entrada de blog"],
-          "premium": ["3 entrada de blog"]
+          "premium": ["3 entradas de blog"]
         },
         {
           "name": "Sugerencia",
