wip: landing page service

--- a/public/locales/en/services.json
+++ b/public/locales/en/services.json
@@ -78,6 +78,11 @@
         ]
       }
     ],
+    "projectsTitle": "Highlighted Web Pages",
+    "projectsText": [
+      "We develop websites globally using JAMStack, providing you with a solid foundation for continuous growth without being hindered by the technological limitations of some providers.",
+      "Grow at your own pace without worries!"
+    ],
     "pricing": {
       "plans": [
         {
