--- a/public/locales/es/services.json
+++ b/public/locales/es/services.json
@@ -78,6 +78,11 @@
         ]
       }
     ],
+    "projectsTitle": "Páginas web destacadas",
+    "projectsText": [
+      "Desarrollamos Páginas Web en todo el mundo utilizando JAMStack, lo que te permite tener una base propia sobre la cual seguir creciendo, sin estancarte en límites de tecnología que tienen algunos proveedores.",
+      "¡Crece a tu ritmo sin preocuparte!"
+    ],
     "pricing": {
       "plans": [
         {
