feat: add project images transition and pricing title

--- a/public/locales/en/services.json
+++ b/public/locales/en/services.json
@@ -84,6 +84,7 @@
       "Grow at your own pace without worries!"
     ],
     "pricing": {
+      "title": "Flexible plans to fit your needs",
       "plans": [
         {
           "id": "Basic",
